force-app/main/default/objects/OPP_PremiumSchedule__c/OPP_PremiumSchedule__c.object-meta.xml
<CustomObject>
    <label>Premium Schedule</label>
    <nameField>
        <label>Premium Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premium Schedule</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>