force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSCaclType__c.field-meta.xml
<CustomField>
    <fullName>CRSCaclType__c</fullName>
    <label>CaclType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>