force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSExpPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>CRSExpPaymentDate__c</fullName>
    <description>회수예정일</description>
    <label>Exp. Payment Date</label>
    <type>Date</type>
</CustomField>