force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSExpPaymentDateNum__c.field-meta.xml
<CustomField>
    <fullName>CRSExpPaymentDateNum__c</fullName>
    <label>Exp. Payment Date(Num)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>