force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSInstallBrokerage__c.field-meta.xml
<CustomField>
    <fullName>CRSInstallBrokerage__c</fullName>
    <label>Install Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>