force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSInstallment__c.field-meta.xml
<CustomField>
    <fullName>CRSInstallment__c</fullName>
    <description>원보험계약의 분납회차</description>
    <label>No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>