force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSInstallmentRate__c.field-meta.xml
<CustomField>
    <fullName>CRSInstallmentRate__c</fullName>
    <label>Installment Rate(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>