force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSInstallPremium__c.field-meta.xml
<CustomField>
    <fullName>CRSInstallPremium__c</fullName>
    <label>Install Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>