force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSInsurancePolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>CRSInsurancePolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>원보험 관련 계약</description>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Premium Schedule</relationshipLabel>
    <relationshipName>Premium_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>