force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>CRSPaymentDueDate__c</fullName>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>