force-app/main/default/objects/OPP_PremiumSchedule__c/fields/CRSPaymentDueDateNum__c.field-meta.xml
<CustomField>
    <fullName>CRSPaymentDueDateNum__c</fullName>
    <label>Payment Due Date(Num)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>