force-app/main/default/objects/OPP_PremiumSchedule__c/fields/DaysFromInception__c.field-meta.xml
<CustomField>
    <fullName>DaysFromInception__c</fullName>
    <label>Days from Inception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>