force-app/main/default/objects/OPP_PremiumSchedule__c/fields/InstallDate_fm__c.field-meta.xml
<CustomField>
    <fullName>InstallDate_fm__c</fullName>
    <formula>Opportunity_lk__r.PeriodFrom__c +  DaysFromInception__c</formula>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>