force-app/main/default/objects/OPP_PremiumSchedule__c/fields/Placement_lk__c.field-meta.xml
<CustomField>
    <fullName>Placement_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Premium Schedule</relationshipLabel>
    <relationshipName>Premium_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>