force-app/main/default/objects/OPP_PremiumSchedule__c/fields/Prem_Currency__c.field-meta.xml
<CustomField>
    <fullName>Prem_Currency__c</fullName>
    <label>Prem Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>