force-app/main/default/objects/OPP_PremiumSchedule__c/fields/SlipGrossPrem__c.field-meta.xml
<CustomField>
    <fullName>SlipGrossPrem__c</fullName>
    <label>Gross Prem (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>