force-app/main/default/objects/OPP_PremiumSchedule__c/fields/SlipGrossPremDP__c.field-meta.xml
<CustomField>
    <fullName>SlipGrossPremDP__c</fullName>
    <label>Gross Prem (DP Applied)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>