force-app/main/default/objects/OPP_PremiumSchedule__c/fields/SlipInfo_lk__c.field-meta.xml
<CustomField>
    <fullName>SlipInfo_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slip</label>
    <referenceTo>OPP_SlipInfo__c</referenceTo>
    <relationshipLabel>Premium Schedule</relationshipLabel>
    <relationshipName>PremiumSchedule</relationshipName>
    <type>Lookup</type>
</CustomField>