force-app/main/default/objects/OPP_PremiumSchedule__c/fields/TotalInstalls__c.field-meta.xml
<CustomField>
    <fullName>TotalInstalls__c</fullName>
    <label># of installs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>